[V8] Fix issue with trying to access a constructor in a frame that has been removed https://bugs.webkit.org/show_bug.cgi?id=84640

Reviewed by Kentaro Hara.

Source/WebCore:

This regressed in r113250. Now we do what we did before and return undefined if the frame
does not have a context.

Test: fast/dom/constructor-in-removed-frame.html

* bindings/v8/V8DOMWrapper.cpp:
(WebCore::V8DOMWrapper::constructorForType):

LayoutTests:

* fast/dom/constructor-in-removed-frame-expected.txt: Added.
* fast/dom/constructor-in-removed-frame.html: Added.


Canonical link: https://commits.webkit.org/102153@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114989 268f45cc-cd09-0410-ab3c-d52691b4dbfc